--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT = 4000
 DB_NAME = "altermap"
-DB_USER = "admin"
-DB_PASSWORD = "password"
+DB_USER = "altermap8421"
+DB_PASSWORD = "EDz_ziZm_v5vDwYTHofj"
