--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PORT = 4000
 DB_NAME = "altermap"
 DB_USER = "altermap8421"
 DB_PASSWORD = "EDz_ziZm_v5vDwYTHofj"
+DATABASE_URL="postgres://altermap_8421:EDz_ziZm_v5vDwYTHofj@altermap-8421.postgresql.dbs.scalingo.com:32702/altermap_8421?sslmode=prefer"
